@@ -15,8 +15,6 @@
 (*                                                                        *)
 (**************************************************************************)
 
-(*i $Id: cliquetree.ml,v 1.6 2005-11-02 13:43:35 filliatr Exp $ i*)
-
 module CliqueTree(Gr : Sig.G) = struct
 
   (* Original vertex set (of Gr) *)
