@@ -15,8 +15,6 @@
 (*                                                                        *)
 (**************************************************************************)
 
-(* $Id: gmap.ml,v 1.1 2004-10-20 09:59:56 signoles Exp $ *)
-
 (** {2 Mapping of vertices} *)
 
 module type V_SRC = sig
