@@ -15,8 +15,6 @@
 (*                                                                        *)
 (**************************************************************************)
 
-(*i $Id: minsep.mli,v 1.4 2004-10-22 16:31:03 conchon Exp $ i*)
-
 (**
   Minimal separators of a graph
   
