@@ -15,8 +15,6 @@
 (*                                                                        *)
 (**************************************************************************)
 
-(* $Id$ *)
-
 (* Signature for graphs *)
 module type G = sig
 
